<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gary"
    android:orientation="vertical"
    >

    <!-- 欢迎的头像和文本 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/login_manager" >
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/login_text_welcome"
            android:textColor="@color/light_blue" />
    </LinearLayout>
    <!-- 登录的账号和密码 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="#fff"
        android:padding="5dp" >

        <!-- 登录的手机号 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/login_info"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/login_text_phone" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#0004FF"
                android:layout_weight="1"
                android:inputType="number"
                android:text="19100001234"
                android:maxLength="11"
                android:textSize="18sp"
                android:singleLine="true"
                android:background="@null"
                />
        </LinearLayout>

        <View style="@style/horizontal_line" />
        <!-- 登录的密码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/login_info"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/login_text_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:text="123456"
                android:background="@null" />
        </LinearLayout>
    </LinearLayout>

    <!-- 登录按钮 -->

    <Button
        android:id="@+id/bt_login"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/login_text_login"
        android:textSize="18sp"
        android:textColor="@color/blue" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <!-- 注册 -->
        <TextView
            android:id="@+id/tv_register"
            style="@style/login_service"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:text="@string/login_text_register" />

        <!-- 临时密码 -->
        <TextView
            android:id="@+id/tv_temporary_psw"
            style="@style/login_service"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:text="@string/login_text_temporarypassword" />

        <!-- 忘记密码 -->
        <TextView
            android:id="@+id/tv_forget_psw"
            style="@style/login_service"
            android:layout_toRightOf="@+id/tv_temporary_psw"
            android:layout_marginLeft="50dp"
            android:text="@string/login_text_forgetpassword" />
    </RelativeLayout>

</LinearLayout>


